tests/baselines/reference/symbolType2.errors.txt
symbolType2.ts(2,7): error TS2322: Type 'typeof Symbol.toPrimitive' is not assignable to type 'object'.


==== symbolType2.ts (1 errors) ====
    Symbol.isConcatSpreadable in {};
    "" in Symbol.toPrimitive;
          ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'typeof Symbol.toPrimitive' is not assignable to type 'object'.